--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">film-app</string>
+
+    <string name="preference_file_key">nl.avans.film_app.SHARED_PREFS_FILE</string>
+    <string name="saved_token">saved_token</string>
 </resources>
